Resolves: tdf#126304 resizing the extension manager breaks redraw

Change-Id: I1211c90a72048f868ec7ba7a7b6bed452ae8ac4b
Reviewed-on: https://gerrit.libreoffice.org/75792
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>