desktop/source/deployment/gui/dp_gui_extlistbox.cxx
@@ -709,6 +709,7 @@ void ExtensionBox_Impl::SetupScrollBar()
 void ExtensionBox_Impl::Resize()
 {
     RecalcAll();
+    Invalidate();
 }
 
 void ExtensionBox_Impl::SetDrawingArea(weld::DrawingArea* pDrawingArea)
